typescript/checker/tests/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpressionDivideAmbiguity1.ts.stderr
error: UndefinedSymbol {
    sym: Atom('notregexp' type=dynamic),
    span: Span {
        lo: BytePos(
            3,
        ),
        hi: BytePos(
            12,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpressionDivideAmbiguity1.ts:2:2
  |
2 | /notregexp/a.foo();
  |  ^^^^^^^^^

error: UndefinedSymbol {
    sym: Atom('a' type=inline),
    span: Span {
        lo: BytePos(
            13,
        ),
        hi: BytePos(
            14,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpressionDivideAmbiguity1.ts:2:12
  |
2 | /notregexp/a.foo();
  |            ^

